--- a/.github/workflows/preprocessing.yml
+++ b/.github/workflows/preprocessing.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'namadataset/**'
       - 'preprocessing/automate_surya.py'
+  workflow_dispatch:
 
 jobs:
   preprocess:
@@ -18,32 +19,25 @@ jobs:
       contents: write
 
     steps:
-      # 1. Checkout Repository (Ambil kode terbaru)
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Setup Python Environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      # 3. Install Dependencies
-      # Menginstall library yang di-import di automate_surya.py
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pandas numpy scikit-learn
 
-      # 4. Jalankan Script Preprocessing
-      # Pastikan nama folder sudah direname sesuai struktur di atas
       - name: Run Preprocessing Script
         run: |
           python preprocessing/automate_surya.py \
             --input "datasets/heart_disease.csv" \
             --output "preprocessing/heart_disease_preprocessing"
 
-      # 5. Commit dan Push Hasil (Syarat Advance: Mengembalikan Dataset Terbaru)
       - name: Commit and Push Processed Data
         run: |
           # Konfigurasi identitas bot git
